remove home_dir dependencies, update yaml files, update env and its name, update README

--- a/config/data.yml
+++ b/config/data.yml
@@ -1,36 +1,7 @@
 
     #files & folders
-code_dir: RocketRL/python
-data_dir: data/
-fig_dir: figures/
-data_file: 'rocket_data.csv' #most of the data
-# data_file: data1.csv #initial data set
-
-
-#plotting variables:
-#RL plots:
-colors:
-  Total Reward: k
-  Reward: b
-  episodes: g
-  Input Temp: m
-  Output Temp: r
-  Num steps: k
-  Action: g 
-  
-#RL model variables:
-gamma: 0.618
-n_exp: 101 # number of experiments to run 
-
-action_map:
-  0: 1
-  1: 2
-  2: 3
-  3: 4
-  4: -1
-  5: -2
-  6: -3
-  7: -4
+data_file_path: data/rocket_data.csv #most of the data
+result_path: figures/
 
 #variables to change the scale for:
 change_scale:
@@ -61,6 +32,8 @@ out_var_name:
   - CH4 mol frac
   - output temp (K)
 
+
+#TO DO: move this to relevant func when done
 #data
 
 #Observations that are the basis of plotted variables:
