--- a/config/data.yml
+++ b/config/data.yml
@@ -1,42 +1,24 @@
-
-    #files & folders
-<<<<<<< HEAD:config/data.yml
+#paths:
 data_file_path: data/rocket_data.csv #most of the data
-result_path: figures/
-=======
-code_dir: RocketRL/python
-data_dir: data/
-fig_dir: figures/
-data_file: 'rocket_data.csv' #most of the data
-# data_file: data1.csv #initial data set
+result_path: results/
+pickle_path: pickles/
+fig_path: data/figures/
+
+#regression variables: 
+# Alpha (regularization strength) of LASSO regression
+lasso_eps: 0.0001
+lasso_nalpha: 40
+lasso_iter: 500000
+# Min and max degree of polynomials features to consider
+degree_min: 4
+degree_max: 4
+cv: 5
+# Test/train split
+test_set_fraction: .1
 
 
-#plotting variables:
-#RL plots:
-colors:
-  Total Reward: k
-  Reward: b
-  episodes: g
-  Input Temp: m
-  Output Temp: r
-  Num steps: k
-  Action: g 
-  Target: g
-  
-#RL model variables:
-gamma: 0.618
-n_exp: 10000 # number of experiments to run 
 
-action_map:
-  0: 1
-  1: 2
-  2: 3
-  3: 4
-  4: -1
-  5: -2
-  6: -3
-  7: -4
->>>>>>> added target temp to state space so Q-agent trains on and an solve any temp change:config/config.yml
+#data management variables: 
 
 #variables to change the scale for:
 change_scale:
@@ -55,7 +37,7 @@ out_var:
   - O_CH4_mol_frac
   - O_t
 
-#corresponding names, for figure labeling: p
+#corresponding names, for figure labeling: 
 in_var_name:
   - CH4 flow rate, g/s
   - CH4 temp (K)
