--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # figures
-figures/
+results/data/figures/
+results/model/figures/
+video_labels/
 
 # references to ignore
 RocketRL/python/refs
 
 # work in progress
-RocketRL/python/agent
+RocketRL/python/in_progress
 
 # pycache
 __pycache__/
@@ -13,3 +15,4 @@ __pycache__/
 # extensions to ignore
 *.pyc
 *.p
+
