--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ RocketRL/python/refs
 
 # work in progress
 RocketRL/python/in_progress
+RocketRL/python/func/ray_funcs.py
 
 # pycache
 __pycache__/
 
 # extensions to ignore
 *.pyc
-*.p
+
 
