--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 #paths:
-
+repo_path: Rocket_RL/
 #data
 data_file_path: data/rocket_data.csv #most of the data
 result_path: results/
@@ -14,6 +14,7 @@ pickle_path: pickles/
 model_result_path: model/figures/
 
 #Model variables
+
 
 #regression variables: 
 # Min and max degree of polynomials features to consider
