--- a/config/config.yml
+++ b/config/config.yml
@@ -7,6 +7,7 @@ result_path: results/
 pickle_path: pickles/
 data_result_path: data/figures/
 labels_path: video_labels/
+ray_results_path: ray_results/RocketRL/
 
 #model
 #both of the below are in the results folder
@@ -15,18 +16,71 @@ model_result_path: model/figures/
 
 #Model variables
 
+# Regression variables: 
+reg_model: lasso #either linreg or lasso. LASSO CV for L1 regularization
+# Alpha (regularization strength) of LASSO regression
+lasso_eps: 0.0001
+lasso_nalpha: 40
+lasso_iter: 500000
+cv: 5
 
-#regression variables: 
 # Min and max degree of polynomials features to consider
 degree_min: 3
 degree_max: 3
 # Test/train split
 test_set_fraction: .2
 
-#3d data plot columns:
-xvar: 1
-yvar: 2
-zvar: 0
+# RL Variables:
+
+# Environment variables: 
+# The MSE threshold to determine whether the agent has reached the goal 
+# for each of the 3 inputs
+MSE_thresh1: 0.01
+MSE_thresh2: 0.01
+MSE_thresh3: 0.01
+
+# Reward upon reaching the goal
+reward: 10000
+
+# Scaling variable for the MSE:
+MSE_scale: 1000 #multiply the MSE by this to get negative reward
+
+# Action range: can go up or down this amount
+action_range: 0.2
+
+# Noise is really an add-on to the regression model: it adds some random noise to
+# the deterministic regression output to more closely mimic the simulation space
+# Remember that the range of any variable is 0 - 1
+noise: 0
+
+# This removes the top & bottom fraction of the input space.
+# The range is 0-1
+minmaxbuffer: 0
+
+# Experiment variables:
+  #Stopping conditions:
+time_total_s: 600000
+timesteps_total: 100000000
+episode_reward_mean: 10000
+
+checkpoint-freq: 1
+
+num_workers: 3 # 1 fewer than available CPU!
+
+
+# PPO agent variables:
+gamma: 0.995 # Discount factor of the MDP
+horizon: 2000 # Number of steps after which the rollout gets cut
+num_sgd_iter: 30 #Number of stochastic gradient descent iterations in each outer loop
+sgd_stepsize: 0.00005
+timesteps_per_batch: 4000
+min_steps_per_task: 200
+
+
+
+# Rendering settings that may need to be tweaked per model:
+buff_axis: 0.2 #buffer for top & bottom of screen 
+scalestep: 100 #number steps
 
 #plot variables:
 #video:
@@ -40,6 +94,13 @@ labels:
   - O1
   - O2
   - O3
+
+#3d data plot columns:
+xvar: 1
+yvar: 2
+zvar: 0
+
+
 
 fs: 14 #fontsize for x & y labels
 
