Clean up code, make model variables easier to adjust and understand

--- a/config/config.yml
+++ b/config/config.yml
@@ -33,24 +33,28 @@ test_set_fraction: .2
 # RL Variables:
 
 # Environment variables: 
-# The MSE threshold to determine whether the agent has reached the goal 
-# for each of the 3 inputs
-MSE_thresh1: 0.01
-MSE_thresh2: 0.01
-MSE_thresh3: 0.01
+scale_var: 100 # scales all the normalized input/output values
+
+# The fraction within range of the target within which
+# we say the agent has reached the goal.
+# For each of the 3 inputs. 
+thresh1: .1 #within 10% of the target
+thresh2: .1
+thresh3: .1
 
 # Reward upon reaching the goal
-reward: 10000
+# This is multiplied by scale_var
+reward: 100
 
 # Scaling variable for the MSE:
-MSE_scale: 1000 #multiply the MSE by this to get negative reward
+MSE_scale: 1 #multiply the MSE by this to get negative reward
 
-# Action range: can go up or down this amount
-action_range: 0.2
+# Action range: can go up or down this % of the range
+action_range: .2
 
 # Noise is really an add-on to the regression model: it adds some random noise to
 # the deterministic regression output to more closely mimic the simulation space
-# Remember that the range of any variable is 0 - 1
+# Noise is a fraction of the threshold for accuracy: a fraction of thresh1
 noise: 0
 
 # This removes the top & bottom fraction of the input space.
@@ -75,8 +79,6 @@ num_sgd_iter: 30 #Number of stochastic gradient descent iterations in each outer
 sgd_stepsize: 0.00005
 timesteps_per_batch: 4000
 min_steps_per_task: 200
-
-
 
 # Rendering settings that may need to be tweaked per model:
 buff_axis: 0.2 #buffer for top & bottom of screen 
